src/objects/Payouts__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Complaints_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payouts</relationshipLabel>
        <relationshipName>Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Settlements</relationshipLabel>
        <relationshipName>Settlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_received__c</fullName>
        <label>Date received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>Case__r.Related_Store_Name__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_PRO_Rewards__c</fullName>
        <formula>Account__r.Pro_Rewards_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HD PRO Rewards #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monetary_Payout_Amount__c</fullName>
        <label>Monetary Payout Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Total__c</fullName>
        <formula>Labor__c + Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Type__c</fullName>
        <label>Payout Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund for Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monetary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solution_Business_Fix__c</fullName>
        <label>Solution/Business Fix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_No__c</fullName>
        <formula>Case__r.Related_Store_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payout_Total__c</fullName>
        <label>Total Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payouts</label>
    <nameField>
        <displayFormat>Payout No-{00000}</displayFormat>
        <label>Payout#</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IS000000097PvMAI_00NS0000001C0k7MAC</fullName>
        <active>false</active>
        <field>Payout_Product__c.Payouts__c</field>
        <filterItems>
            <field>Payouts__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>China Pending Payout, China Processed Payout</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>China Payout Product_Payouts</name>
    </namedFilters>
    <pluralLabel>Payouts</pluralLabel>
    <recordTypes>
        <fullName>China_Payout</fullName>
        <active>true</active>
        <label>China Payout</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Payout</fullName>
        <active>true</active>
        <label>US Payout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Behr_MonetaryAmount_China</fullName>
        <active>true</active>
        <description>Monetary Payout Amount is Mandatory if record type=China Payout and Payout type= Monetary.</description>
        <errorConditionFormula>( $RecordType.DeveloperName =&apos;China_Payout&apos;)  &amp;&amp; ISPICKVAL(Payout_Type__c ,&apos;Monetary&apos;) &amp;&amp;  ISBLANK(Monetary_Payout_Amount__c)</errorConditionFormula>
        <errorDisplayField>Monetary_Payout_Amount__c</errorDisplayField>
        <errorMessage>Monetary Payout Amount is mandatory if Payout Type is Monetary</errorMessage>
    </validationRules>
</CustomObject>